--- a/package.json
+++ b/package.json
@@ -2,28 +2,24 @@
   "name": "jonos",
   "version": "1.0.1",
   "description": "CLI control of my sonos installation",
-  "main": "dist/jonos.js",
   "scripts": {
     "clean": "rm -rf dist/ node_modules/.cache/",
-    "format": "prettier-standard src/*.js",
-    "lint": "standard src/*.js|snazzy",
+    "format": "prettier-standard src/*.mjs",
+    "lint": "standard src/*.mjs|snazzy",
     "build": "rollup -c rollup.config.js",
-    "postbuild": "chmod +x dist/jonos",
-    "version": "npm run build && git add dist/jonos"
+    "postbuild": "chmod +x dist/jonos.mjs",
+    "version": "npm run build && git add dist/jonos.mjs"
   },
   "author": "",
   "license": "Unlicense",
   "dependencies": {
     "debug": "^4.3.1",
     "ms": "^2.1.3",
-    "promise-goodies": "github:ludlovian/promise-goodies",
     "sade": "^1.7.4",
     "sonos": "^1.14.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "esm": "^3.2.25",
-    "rollup-plugin-cleanup": "^3.2.1"
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2"
   }
 }
