--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "Unlicense",
   "dependencies": {
-    "debug": "^4.3.1",
-    "ms": "^2.1.3",
+    "@lukeed/ms": "^2.0.0",
+    "logjs": "github:ludlovian/logjs",
     "sade": "^1.7.4",
     "sonos": "^1.14.1"
   },
