--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "2.0.0",
   "description": "CLI control of my sonos installation",
   "scripts": {
-    "format": "prettier-standard src/*.mjs",
-    "lint": "standard src/*.mjs|snazzy",
-    "start": "node src/index.mjs server"
+    "format": "prettier-standard 'src/**/*.{mjs,js}'",
+    "lint": "standard 'src/**/*.{mjs,js}' | snazzy",
+    "start": "node src/index.mjs"
   },
   "author": "",
   "license": "Unlicense",
   "dependencies": {
     "@lukeed/ms": "^2.0.1",
-    "@polka/send-type": "^0.5.2",
-    "logjs": "github:ludlovian/logjs",
+    "@preact/signals-core": "^1.3.0",
+    "@svrooij/sonos": "^2.5.0",
+    "debug": "^4.3.4",
     "pixutil": "github:ludlovian/pixutil",
     "polka": "^0.5.2",
-    "sade": "^1.8.1",
-    "sonos": "github:ludlovian/node-sonos",
-    "sortby": "github:ludlovian/sortby"
+    "retry": "github:ludlovian/retry",
+    "sirv": "^2.0.3",
+    "timer": "github:ludlovian/timer",
+    "tinydate": "^1.3.0"
   }
 }
