--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@preact/signals": "^1.1.3",
     "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "htm": "^3.1.1",
     "preact": "^10.15.1",
     "rollup": "^3.25.1",
