--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "clean": "rm -rf dist/",
     "format": "prettier-standard 'src/**/*.{mjs,js}'",
     "lint": "standard 'src/**/*.{mjs,js}' | snazzy",
-    "build": "rollup -c rollup.config.js",
-    "start:dev": "NODE_ENV=dev node src/index.mjs",
+    "build:dev": "rollup -c",
+    "build:prod": "NODE_ENV=production rollup -c",
+    "start:dev": "rollup -c -w",
     "start:prod": "NODE_ENV=production node dist/index.mjs"
   },
   "author": "",
@@ -33,6 +34,7 @@
     "@preact/signals": "^1.1.3",
     "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-run": "^3.0.1",
     "@rollup/plugin-terser": "^0.4.3",
     "htm": "^3.1.1",
     "preact": "^10.15.1",
