--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "author": "",
   "license": "Unlicense",
   "dependencies": {
+    "@ludlovian/debug": "github:ludlovian/debug",
     "@lukeed/ms": "^2.0.1",
     "@polka/send-type": "^0.5.2",
     "@preact/signals-core": "^1.3.0",
     "bouncer": "github:ludlovian/bouncer",
-    "debug": "github:ludlovian/debug",
     "httpie": "^1.1.2",
     "parsley": "github:ludlovian/parsley",
     "pixutil": "github:ludlovian/pixutil",
