--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
   "author": "",
   "license": "Unlicense",
   "dependencies": {
+  },
+  "devDependencies": {
     "@ludlovian/debug": "github:ludlovian/debug",
     "@lukeed/ms": "^2.0.1",
     "@polka/send-type": "^0.5.2",
     "@preact/signals-core": "^1.3.0",
-    "bouncer": "github:ludlovian/bouncer",
-    "httpie": "^1.1.2",
-    "parsley": "github:ludlovian/parsley",
-    "pixutil": "github:ludlovian/pixutil",
-    "polka": "^0.5.2",
-    "sirv": "^2.0.3",
-    "sortby": "github:ludlovian/sortby",
-    "timer": "github:ludlovian/timer",
-    "tinydate": "^1.3.0"
-  },
-  "devDependencies": {
     "@preact/signals": "^1.1.3",
     "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-run": "^3.0.1",
     "@rollup/plugin-terser": "^0.4.3",
+    "bouncer": "github:ludlovian/bouncer",
     "htm": "^3.1.1",
+    "httpie": "^1.1.2",
+    "parsley": "github:ludlovian/parsley",
+    "pixutil": "github:ludlovian/pixutil",
+    "polka": "^0.5.2",
     "preact": "^10.15.1",
     "rollup": "^3.25.1",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-gzip": "^3.1.0"
+    "rollup-plugin-gzip": "^3.1.0",
+    "sirv": "^2.0.3",
+    "sortby": "github:ludlovian/sortby",
+    "timer": "github:ludlovian/timer",
+    "tinydate": "^1.3.0"
   }
 }
