--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jonos",
   "private": true,
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Control of my sonos installation",
   "scripts": {
     "clean": "rm -rf dist/",
@@ -15,8 +15,7 @@
   },
   "author": "",
   "license": "Unlicense",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@ludlovian/debug": "github:ludlovian/debug",
     "@lukeed/ms": "^2.0.1",
