--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   },
   "author": "",
   "license": "Unlicense",
-  "dependencies": {},
+  "dependencies": {
+    "@ludlovian/signal-extra": "github:ludlovian/signal-extra"
+  },
   "devDependencies": {
     "@ludlovian/debug": "github:ludlovian/debug",
     "@lukeed/ms": "^2.0.1",
     "@polka/send-type": "^0.5.2",
-    "@preact/signals-core": "^1.3.0",
     "@preact/signals": "^1.1.3",
+    "@preact/signals-core": "^1.3.0",
     "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-run": "^3.0.1",
