--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
   },
   "author": "",
   "license": "Unlicense",
-  "dependencies": {
-    "@ludlovian/signal-extra": "github:ludlovian/signal-extra"
-  },
   "devDependencies": {
     "@ludlovian/debug": "github:ludlovian/debug",
+    "@ludlovian/signal-extra": "github:ludlovian/signal-extra",
     "@lukeed/ms": "^2.0.1",
     "@polka/send-type": "^0.5.2",
     "@preact/signals": "^1.1.3",
     "@preact/signals-core": "^1.3.0",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-run": "^3.0.1",
     "@rollup/plugin-terser": "^0.4.3",
+    "babel-preset-preact": "^2.0.0",
     "bouncer": "github:ludlovian/bouncer",
     "htm": "^3.1.1",
     "httpie": "^1.1.2",
