--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jonos",
+  "name": "@ludlovian/jonos",
   "private": true,
   "type": "module",
   "version": "0.3.12",
@@ -10,38 +10,45 @@
     "lint": "standard 'src/**/*.{mjs,js}' | snazzy",
     "build:dev": "rollup -c",
     "build:prod": "NODE_ENV=production rollup -c",
-    "start:dev": "rollup -c -w",
+    "start:dev": "rollup -c && node dist/index.mjs",
+    "start:dev2": "rollup -c -w",
     "start:prod": "NODE_ENV=production node dist/index.mjs",
     "start": "node dist/index.mjs"
   },
   "author": "",
   "license": "Unlicense",
-  "devDependencies": {
+  "dependencies": {
+    "@ludlovian/bouncer": "github:ludlovian/bouncer",
+    "@ludlovian/configure": "github:ludlovian/configure",
     "@ludlovian/debug": "github:ludlovian/debug",
-    "@ludlovian/signal-extra": "github:ludlovian/signal-extra",
-    "@lukeed/ms": "^2.0.1",
-    "@polka/send-type": "^0.5.2",
-    "@preact/signals": "^1.1.4",
-    "@preact/signals-core": "^1.3.1",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-run": "^3.0.1",
-    "@rollup/plugin-terser": "^0.4.3",
-    "babel-preset-preact": "^2.0.0",
-    "bouncer": "github:ludlovian/bouncer",
-    "htm": "^3.1.1",
-    "httpie": "^1.1.2",
-    "parsley": "github:ludlovian/parsley",
-    "pixutil": "github:ludlovian/pixutil",
-    "polka": "^0.5.2",
-    "preact": "^10.15.1",
-    "rollup": "^3.26.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-gzip": "^3.1.0",
-    "sirv": "^2.0.3",
-    "sortby": "github:ludlovian/sortby",
-    "timer": "github:ludlovian/timer",
+    "@ludlovian/equal": "github:ludlovian/equal",
+    "@ludlovian/jonos-model": "github:ludlovian/jonos-model",
+    "@ludlovian/serialize-json": "github:ludlovian/serialize-json",
+    "@ludlovian/signalbox": "github:ludlovian/signalbox",
+    "@ludlovian/sortby": "github:ludlovian/sortby",
+    "@ludlovian/subscribe-signal": "github:ludlovian/subscribe-signal",
+    "@ludlovian/timer": "github:ludlovian/timer",
+    "@lukeed/ms": "^2.0.2",
+    "@polka/send": "1.0.0-next.25",
+    "@preact/signals": "^1.2.3",
+    "@preact/signals-core": "^1.6.1",
+    "bootstrap-icons": "^1.11.3",
+    "clsx": "^2.1.1",
+    "mrmime": "^2.0.0",
+    "polka": "1.0.0-next.25",
+    "preact": "^10.22.0",
+    "sirv": "^2.0.4",
     "tinydate": "^1.3.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-run": "^3.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "babel-preset-preact": "^2.0.0",
+    "rollup": "^4.18.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-gzip": "^3.1.2"
   }
 }
