--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@rollup/plugin-run": "^3.1.0",
     "@rollup/plugin-terser": "^0.4.4",
     "babel-preset-preact": "^2.0.0",
+    "flattie": "^1.1.1",
     "rollup": "^4.18.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-gzip": "^3.1.2"
