--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "@ludlovian/serialize-json": "github:ludlovian/serialize-json",
     "@ludlovian/signalbox": "github:ludlovian/signalbox",
     "@ludlovian/sortby": "github:ludlovian/sortby",
+    "@ludlovian/static": "github:ludlovian/static",
     "@ludlovian/subscribe-signal": "github:ludlovian/subscribe-signal",
     "@ludlovian/timer": "github:ludlovian/timer",
     "@lukeed/ms": "^2.0.2",
     "@polka/send": "1.0.0-next.25",
     "@preact/signals": "^1.2.3",
     "@preact/signals-core": "^1.6.1",
+    "better-sqlite3": "^11.1.1",
     "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
-    "mrmime": "^2.0.0",
     "polka": "1.0.0-next.25",
     "preact": "^10.22.0",
     "sirv": "^2.0.4",
