--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "better-sqlite3": "^11.1.2",
     "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
+    "mrmime": "^2.0.0",
     "polka": "1.0.0-next.25",
-    "preact": "^10.22.1",
+    "preact": "^10.23.0",
     "sirv": "^2.0.4",
     "tinydate": "^1.3.0"
   },
@@ -51,7 +52,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "babel-preset-preact": "^2.0.0",
     "flattie": "^1.1.1",
-    "rollup": "^4.18.1",
+    "rollup": "^4.19.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-gzip": "^3.1.2"
   }
