--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:prod": "NODE_ENV=production rollup -c",
     "start:dev": "rollup -c && node dist/index.mjs",
     "start:dev2": "rollup -c -w",
-    "start:prod": "NODE_ENV=production node dist/index.mjs",
+    "start:prod": "node --env-file=.env dist/index.mjs",
     "start": "node dist/index.mjs"
   },
   "author": "",
